# FilterImage2025Cpp

./: .gitignore  settings.gradle.kts
FilterImage/: build.gradle.kts
FilterImage-Hair/: build.gradle.kts
FilterImage-Hair/src/main/cpp/: CMakeLists.txt  filterimage_hair.cpp
FilterImage-Hair/src/main/java/co/hoppen/filterimage_hair/: HairEngine.kt  HairFilterHelper.kt  HairFilterType.kt
FilterImage-Hair/src/main/java/co/hoppen/filterimage_hair/filter/: ScalpOil.kt
FilterImage-Skin/: build.gradle.kts
FilterImage-Skin/src/main/cpp/: CMakeLists.txt  filterimage_skin.cpp
FilterImage-Skin/src/main/java/co/hoppen/filterimage_skin/: SkinEngine.kt  SkinFilterHelper.kt  SkinFilterType.kt
FilterImage-Skin/src/main/java/co/hoppen/filterimage_skin/filter/: SkinHydrationStatus.kt
FilterImage/src/main/java/co/hoppen/filterimage/: BaseFilter.kt  FilterHelper.kt  FilterType.kt
FilterImage/src/main/java/co/hoppen/filterimage/model/: Engine.kt  FilterResult.kt  ResultData.kt
FilterImage/src/main/java/co/hoppen/filterimage/utils/: Extensions.kt
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/co/hoppen/filterimage2025cpp/: BaseActivity.kt  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
